style: fix some spacing issues

--- a/client/src/components/containers/SwitchContainer/SwitchContainer.module.scss
+++ b/client/src/components/containers/SwitchContainer/SwitchContainer.module.scss
@@ -1,8 +1,8 @@
 .container {
   width: 100%;
-  > * {
-    margin: 10px 0;
-  }
+  // > * {
+  //   margin: 10px 0;
+  // }
 }
 
 .bigContainer {
