--- a/client/src/components/utilities/TaskList/TaskList.module.scss
+++ b/client/src/components/utilities/TaskList/TaskList.module.scss
@@ -53,7 +53,6 @@
 .container {
   @extend .Horizontal-Flex-Container;
   overflow: hidden;
-  padding-top: 0.5em;
   gap: 0;
   align-items: flex-start;
 }
